# palette-picker-cli

./: .gitignore  README.md  pyproject.toml
palette_picker/: main.py
