[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palette-picker-cli"
version = "0.1.0"
description = "A CLI tool to apply retro aesthetics and color palettes to images using Floyd-Steinberg dithering."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Pillow",
    "numpy",
    "rich"
]

[project.scripts]
palette-picker = "palette_picker.main:main"

[project.urls]
Homepage = "https://github.com/gabsdfreitas/palette-picker-cli"